--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,6 @@ cython_debug/
 /runs
 /statistics
 /previous models
+ssim_clean_comparison.png
+mask_iou_comparison.png
+psnr_clean_comparison.png
